crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@115.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table mc2p2 partition of mc2p for values from (1, 1) to (2, minvalue);"
---
CreateStmt@0..77
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..18
    Ident@13..18 "mc2p2"
  Whitespace@18..19 " "
  Partition@19..28 "partition"
  Whitespace@28..29 " "
  Of@29..31 "of"
  Whitespace@31..32 " "
  RangeVar@32..36
    Ident@32..36 "mc2p"
  Whitespace@36..37 " "
  For@37..40 "for"
  Whitespace@40..41 " "
  Values@41..47 "values"
  Whitespace@47..48 " "
  PartitionBoundSpec@48..75
    From@48..52 "from"
    Whitespace@52..53 " "
    Ascii40@53..54 "("
    AConst@54..55
      Iconst@54..55 "1"
    Ascii44@55..56 ","
    Whitespace@56..57 " "
    AConst@57..58
      Iconst@57..58 "1"
    Ascii41@58..59 ")"
    Whitespace@59..60 " "
    To@60..62 "to"
    Whitespace@62..63 " "
    Ascii40@63..64 "("
    AConst@64..65
      Iconst@64..65 "2"
    Ascii44@65..66 ","
    Whitespace@66..67 " "
    ColumnRef@67..75
      Minvalue@67..75 "minvalue"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

