crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@140.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table boolrangep (a bool, b bool, c int) partition by range (a,b,c);"
---
CreateStmt@0..75
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "boolrangep"
  Whitespace@23..24 " "
  Ascii40@24..25 "("
  ColumnDef@25..31
    Ident@25..26 "a"
    Whitespace@26..27 " "
    TypeName@27..31
      Ident@27..31 "bool"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ColumnDef@33..39
    Ident@33..34 "b"
    Whitespace@34..35 " "
    TypeName@35..39
      Ident@35..39 "bool"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  ColumnDef@41..46
    Ident@41..42 "c"
    Whitespace@42..43 " "
    TypeName@43..46
      IntP@43..46 "int"
  Ascii41@46..47 ")"
  Whitespace@47..48 " "
  PartitionSpec@48..73
    Partition@48..57 "partition"
    Whitespace@57..58 " "
    By@58..60 "by"
    Whitespace@60..61 " "
    Range@61..66 "range"
    Whitespace@66..67 " "
    Ascii40@67..68 "("
    PartitionElem@68..69
      Ident@68..69 "a"
    Ascii44@69..70 ","
    PartitionElem@70..71
      Ident@70..71 "b"
    Ascii44@71..72 ","
    PartitionElem@72..73
      Ident@72..73 "c"
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

